--- a/settings/settings.yaml
+++ b/settings/settings.yaml
@@ -1,8 +1,8 @@
 port: 8008
 database:
   host: localhost
-  port: 3306
-  user: root
-  password: root
+  port: 5432
+  user: postgres
+  password: postgres
   name: d_inventory
   
